# libctags

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.bat  build.yaml  fail.bat  run.bat
include/libctags/: config.h  indexer.h  interface.h
lib/: CMakeLists.txt
lib/ctags_internal/: CMakeLists.txt
lib/libctags/: config.cpp  config_internal.h  include_internal_api.h  indexer.cpp  indexer_internal.h  interface.cpp
test/: CMakeLists.txt  main.cpp
travis/: run.sh
