set (CTAGS_SRC
    ctags/fnmatch/fnmatch.c
    ctags/gnu_regex/regex.c
    ctags/main/args.c
    ctags/main/colprint.c
    ctags/main/debug.c
    ctags/main/dependency.c
    ctags/main/entry.c
    ctags/main/entry_private.c
    ctags/main/error.c
    ctags/main/field.c
    ctags/main/flags.c
    ctags/main/fmt.c
    ctags/main/htable.c
    ctags/main/keyword.c
    ctags/main/kind.c
    ctags/main/lregex.c
    ctags/main/lxpath.c
    ctags/main/mio.c
    ctags/main/nestlevel.c
    ctags/main/numarray.c
    ctags/main/objpool.c
    ctags/main/options.c
    ctags/main/param.c
    ctags/main/parse.c
    ctags/main/portable-scandir.c
    ctags/main/promise.c
    ctags/main/ptag.c
    ctags/main/ptrarray.c
    ctags/main/read.c
    ctags/main/repoinfo.c
    ctags/main/routines.c
    ctags/main/selectors.c
    ctags/main/sort.c
    ctags/main/strlist.c
    ctags/main/tokeninfo.c
    ctags/main/trashbox.c
    ctags/main/vstring.c
    ctags/main/writer-ctags.c
    ctags/main/writer-etags.c
    ctags/main/writer-json.c
    ctags/main/writer-xref.c
    ctags/main/writer.c
    ctags/main/xtag.c
    ctags/optlib/RSpec.c
    ctags/optlib/cmake.c
    ctags/optlib/ctags-optlib.c
    ctags/optlib/elm.c
    ctags/optlib/gdbinit.c
    ctags/optlib/man.c
    ctags/optlib/markdown.c
    ctags/optlib/passwd.c
    ctags/optlib/pod.c
    ctags/optlib/puppetManifest.c
    ctags/optlib/qemuhx.c
    ctags/parsers/ada.c
    ctags/parsers/ant.c
    ctags/parsers/asciidoc.c
    ctags/parsers/asm.c
    ctags/parsers/asp.c
    ctags/parsers/autoconf.c
    ctags/parsers/autoit.c
    ctags/parsers/automake.c
    ctags/parsers/awk.c
    ctags/parsers/basic.c
    ctags/parsers/beta.c
    ctags/parsers/c.c
    ctags/parsers/clojure.c
    ctags/parsers/cobol.c
    ctags/parsers/cpreprocessor.c
    ctags/parsers/css.c
    ctags/parsers/ctags-aspell.c
    ctags/parsers/cxx/cxx.c
    ctags/parsers/cxx/cxx_debug.c
    ctags/parsers/cxx/cxx_debug_type.c
    ctags/parsers/cxx/cxx_keyword.c
    ctags/parsers/cxx/cxx_parser.c
    ctags/parsers/cxx/cxx_parser_block.c
    ctags/parsers/cxx/cxx_parser_function.c
    ctags/parsers/cxx/cxx_parser_lambda.c
    ctags/parsers/cxx/cxx_parser_namespace.c
    ctags/parsers/cxx/cxx_parser_template.c
    ctags/parsers/cxx/cxx_parser_tokenizer.c
    ctags/parsers/cxx/cxx_parser_typedef.c
    ctags/parsers/cxx/cxx_parser_using.c
    ctags/parsers/cxx/cxx_parser_variable.c
    ctags/parsers/cxx/cxx_qtmoc.c
    ctags/parsers/cxx/cxx_scope.c
    ctags/parsers/cxx/cxx_subparser.c
    ctags/parsers/cxx/cxx_tag.c
    ctags/parsers/cxx/cxx_token.c
    ctags/parsers/cxx/cxx_token_chain.c
    ctags/parsers/diff.c
    ctags/parsers/dosbatch.c
    ctags/parsers/dtd.c
    ctags/parsers/dts.c
    ctags/parsers/eiffel.c
    ctags/parsers/erlang.c
    ctags/parsers/falcon.c
    ctags/parsers/flex.c
    ctags/parsers/fortran.c
    ctags/parsers/fypp.c
    ctags/parsers/go.c
    ctags/parsers/html.c
    ctags/parsers/iniconf.c
    ctags/parsers/itcl.c
    ctags/parsers/jprop.c
    ctags/parsers/jscript.c
    ctags/parsers/json.c
    ctags/parsers/ldscript.c
    ctags/parsers/lisp.c
    ctags/parsers/lua.c
    ctags/parsers/m4.c
    ctags/parsers/make.c
    ctags/parsers/matlab.c
    ctags/parsers/myrddin.c
    ctags/parsers/objc.c
    ctags/parsers/ocaml.c
    ctags/parsers/pascal.c
    ctags/parsers/perl.c
    ctags/parsers/perl6.c
    ctags/parsers/php.c
    ctags/parsers/protobuf.c
    ctags/parsers/python.c
    ctags/parsers/pythonloggingconfig.c
    ctags/parsers/r.c
    ctags/parsers/rexx.c
    ctags/parsers/robot.c
    ctags/parsers/rpmspec.c
    ctags/parsers/rst.c
    ctags/parsers/ruby.c
    ctags/parsers/rust.c
    ctags/parsers/scheme.c
    ctags/parsers/sh.c
    ctags/parsers/slang.c
    ctags/parsers/sml.c
    ctags/parsers/sql.c
    ctags/parsers/systemdunit.c
    ctags/parsers/tcl.c
    ctags/parsers/tcloo.c
    ctags/parsers/tex.c
    ctags/parsers/ttcn.c
    ctags/parsers/verilog.c
    ctags/parsers/vhdl.c
    ctags/parsers/vim.c
    ctags/parsers/windres.c
    ctags/parsers/yacc.c
    ctags/parsers/yumrepo.c
)

if (WIN32)
    set (CTAGS_SRC ${CTAGS_SRC} ctags/win32/mkstemp/mkstemp.c)
endif (WIN32)

include_directories (
    ctags/main
    ctags/gnu_regex
    ctags/parsers
    ctags/parsers/cxx
    ctags/fnmatch
)

add_definitions (
    -DHAVE_REGCOMP
    -D__USE_GNU
    -Dbool=int
    -Dtrue=1
    -Dfalse=0
    -Dstrcasecmp=stricmp
)

#TODO: rename
add_library(ctags_internal STATIC ${CTAGS_SRC})
